alignments resolve

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ body {
 
 /* movie list card styles */
 .movie_details_classList_outer {
-  padding: 10vh 0;
+  padding: 11vh 0;
 }
 
 .movies_classList_outer .movies_classList .movies_cardOuter {
